Python/tests/unit_tests/donorimputation/output-sas/donorK02_sas.txt
NOTE: PROCEDURE PRINTTO used (Total process time):
      real time           0.00 seconds
      cpu time            0.01 seconds
      

2390  proc donorimputation
2391     data=indata
2392     instatus=instat
2393     out=outdata
2394     outstatus=outstat
2395     donormap=map
2396     edits="Q1 + Q2 + Q3 + Q4 = total;"
2397     postedits="Q1 + Q2 + Q3 + Q4 - total <= 0; Q1 >=0,"
2398     mindonors=1
2399     pcentdonors=1
2400     n=3
2401     matchfieldstat
2402     eligdon=any
2403     ;
2404     id ident;
2405     mustmatch STAFF;
2406     dataexclvar toexcl;
2407  run;

NOTE: --- Banff System 2.08.002 developed by Statistics Canada ---
NOTE: PROCEDURE DONORIMPUTATION Version 2.06.002
NOTE: Created on Jan 19 2022 at 13:40:59
NOTE: Email: banff@statcan.gc.ca
NOTE: 

NOTE: DATA = WORK.INDATA
NOTE: INSTATUS = WORK.INSTAT
NOTE: OUT = WORK.OUTDATA
NOTE: OUTSTATUS = WORK.OUTSTAT
NOTE: DONORMAP = WORK.MAP
NOTE: EDITS = Q1 + Q2 + Q3 + Q4 = total;
NOTE: POSTEDITS = Q1 + Q2 + Q3 + Q4 - total <= 0; Q1 >=0,
NOTE: MINDONORS = 1
NOTE: PCENTDONORS = 1.00%
NOTE: N = 3
NOTE: NLIMIT not specified.
NOTE: MRL not specified.
NOTE: ELIGDON = ANY
NOTE: RANDOM not specified (random search of donors will not be performed)
NOTE: MATCHFIELDSTAT
NOTE: SEED = 1671572582 (value chosen by the system) 
NOTE: REJECTNEGATIVE (default)
NOTE: DISPLAYLEVEL = 0
NOTE: ID = ident
NOTE: DATAEXCLVAR = toexcl
NOTE: RANDNUMVAR not specified.
NOTE: MUSTMATCH = staff 
NOTE: BY not specified.


Set of EDITS: 
(Positivity EDITS were added because REJECTNEGATIVE option is in effect.)

1
                                                       - Q1  <= 0

2
                                                       - Q2  <= 0

3
                                                       - Q3  <= 0

4
                                                       - Q4  <= 0

5
                                                    - TOTAL  <= 0

0
                                  Q1 + Q2 + Q3 + Q4 - TOTAL   = 0

ERROR: Invalid POSTEDITS.
ERROR: Edits parser: Looking for 'SemiColon' but found 'Unknown character' instead.
       
       Error at or before:
       Q1 + Q2 + Q3 + Q4 - TOTAL <= 0; Q1 >=0,
                                              ^
       
NOTE: The SAS System stopped processing this step because of errors.
WARNING: The data set WORK.OUTDATA may be incomplete.  When this step was stopped there 
         were 0 observations and 0 variables.
WARNING: Data set WORK.OUTDATA was not replaced because this step was stopped.
WARNING: The data set WORK.OUTSTAT may be incomplete.  When this step was stopped there 
         were 0 observations and 0 variables.
WARNING: Data set WORK.OUTSTAT was not replaced because this step was stopped.
WARNING: The data set WORK.MAP may be incomplete.  When this step was stopped there were 
         0 observations and 0 variables.
WARNING: Data set WORK.MAP was not replaced because this step was stopped.
NOTE: PROCEDURE DONORIMPUTATION used (Total process time):
      real time           0.11 seconds
      cpu time            0.00 seconds
      
2408  


2409  proc donorimputation
2410     data=indata
2411     instatus=instat
2412     out=outdata
2413     outstatus=outstat
2414     donormap=map
2415     edits="Q1 + Q2 + Q3 + Q4 = total;"
2416     postedits="Q1 + Q2 + Q3 + Q4 - total <= 0; Q1 >=0:"
2417     mindonors=1
2418     pcentdonors=1
2419     n=3
2420     matchfieldstat
2421     eligdon=any
2422     ;
2423     id ident;
2424     mustmatch STAFF;
2425     dataexclvar toexcl;
2426  run;

NOTE: --- Banff System 2.08.002 developed by Statistics Canada ---
NOTE: PROCEDURE DONORIMPUTATION Version 2.06.002
NOTE: Created on Jan 19 2022 at 13:40:59
NOTE: Email: banff@statcan.gc.ca
NOTE: 

NOTE: DATA = WORK.INDATA
NOTE: INSTATUS = WORK.INSTAT
NOTE: OUT = WORK.OUTDATA
NOTE: OUTSTATUS = WORK.OUTSTAT
NOTE: DONORMAP = WORK.MAP
NOTE: EDITS = Q1 + Q2 + Q3 + Q4 = total;
NOTE: POSTEDITS = Q1 + Q2 + Q3 + Q4 - total <= 0; Q1 >=0:
NOTE: MINDONORS = 1
NOTE: PCENTDONORS = 1.00%
NOTE: N = 3
NOTE: NLIMIT not specified.
NOTE: MRL not specified.
NOTE: ELIGDON = ANY
NOTE: RANDOM not specified (random search of donors will not be performed)
NOTE: MATCHFIELDSTAT
NOTE: SEED = 1671572582 (value chosen by the system) 
NOTE: REJECTNEGATIVE (default)
NOTE: DISPLAYLEVEL = 0
NOTE: ID = ident
NOTE: DATAEXCLVAR = toexcl
NOTE: RANDNUMVAR not specified.
NOTE: MUSTMATCH = staff 
NOTE: BY not specified.


Set of EDITS: 
(Positivity EDITS were added because REJECTNEGATIVE option is in effect.)

1
                                                       - Q1  <= 0

2
                                                       - Q2  <= 0

3
                                                       - Q3  <= 0

4
                                                       - Q4  <= 0

5
                                                    - TOTAL  <= 0

0
                                  Q1 + Q2 + Q3 + Q4 - TOTAL   = 0

ERROR: Invalid POSTEDITS.
ERROR: Edits parser: Looking for 'SemiColon' but found 'Colon' instead.
       
       Error at or before:
       Q1 + Q2 + Q3 + Q4 - TOTAL <= 0; Q1 >=0:
                                              ^
       
NOTE: The SAS System stopped processing this step because of errors.
WARNING: The data set WORK.OUTDATA may be incomplete.  When this step was stopped there 
         were 0 observations and 0 variables.
WARNING: Data set WORK.OUTDATA was not replaced because this step was stopped.
WARNING: The data set WORK.OUTSTAT may be incomplete.  When this step was stopped there 
         were 0 observations and 0 variables.
WARNING: Data set WORK.OUTSTAT was not replaced because this step was stopped.
WARNING: The data set WORK.MAP may be incomplete.  When this step was stopped there were 
         0 observations and 0 variables.
WARNING: Data set WORK.MAP was not replaced because this step was stopped.
NOTE: PROCEDURE DONORIMPUTATION used (Total process time):
      real time           0.06 seconds
      cpu time            0.01 seconds
      
2427  


2428  proc donorimputation
2429     data=indata
2430     instatus=instat
2431     out=outdata
2432     outstatus=outstat
2433     donormap=map
2434     edits="Q1 + Q2 + Q3 + Q4 = total;"
2435     postedits="Q1 + Q2 + Q3 + Q4 - total <= 0; Q1 >=0 "
2436     mindonors=1
2437     pcentdonors=1
2438     n=3
2439     matchfieldstat
2440     eligdon=any
2441     ;
2442     id ident;
2443     mustmatch STAFF;
2444     dataexclvar toexcl;
2445  run;

NOTE: --- Banff System 2.08.002 developed by Statistics Canada ---
NOTE: PROCEDURE DONORIMPUTATION Version 2.06.002
NOTE: Created on Jan 19 2022 at 13:40:59
NOTE: Email: banff@statcan.gc.ca
NOTE: 

NOTE: DATA = WORK.INDATA
NOTE: INSTATUS = WORK.INSTAT
NOTE: OUT = WORK.OUTDATA
NOTE: OUTSTATUS = WORK.OUTSTAT
NOTE: DONORMAP = WORK.MAP
NOTE: EDITS = Q1 + Q2 + Q3 + Q4 = total;
NOTE: POSTEDITS = Q1 + Q2 + Q3 + Q4 - total <= 0; Q1 >=0 
NOTE: MINDONORS = 1
NOTE: PCENTDONORS = 1.00%
NOTE: N = 3
NOTE: NLIMIT not specified.
NOTE: MRL not specified.
NOTE: ELIGDON = ANY
NOTE: RANDOM not specified (random search of donors will not be performed)
NOTE: MATCHFIELDSTAT
NOTE: SEED = 1671572582 (value chosen by the system) 
NOTE: REJECTNEGATIVE (default)
NOTE: DISPLAYLEVEL = 0
NOTE: ID = ident
NOTE: DATAEXCLVAR = toexcl
NOTE: RANDNUMVAR not specified.
NOTE: MUSTMATCH = staff 
NOTE: BY not specified.


Set of EDITS: 
(Positivity EDITS were added because REJECTNEGATIVE option is in effect.)

1
                                                       - Q1  <= 0

2
                                                       - Q2  <= 0

3
                                                       - Q3  <= 0

4
                                                       - Q4  <= 0

5
                                                    - TOTAL  <= 0

0
                                  Q1 + Q2 + Q3 + Q4 - TOTAL   = 0

ERROR: Invalid POSTEDITS.
ERROR: Edits parser: Looking for 'SemiColon' but found 'Done' instead.
       
       Error at or before:
       Q1 + Q2 + Q3 + Q4 - TOTAL <= 0; Q1 >=0
                                             ^
       
NOTE: The SAS System stopped processing this step because of errors.
WARNING: The data set WORK.OUTDATA may be incomplete.  When this step was stopped there 
         were 0 observations and 0 variables.
WARNING: Data set WORK.OUTDATA was not replaced because this step was stopped.
WARNING: The data set WORK.OUTSTAT may be incomplete.  When this step was stopped there 
         were 0 observations and 0 variables.
WARNING: Data set WORK.OUTSTAT was not replaced because this step was stopped.
WARNING: The data set WORK.MAP may be incomplete.  When this step was stopped there were 
         0 observations and 0 variables.
WARNING: Data set WORK.MAP was not replaced because this step was stopped.
NOTE: PROCEDURE DONORIMPUTATION used (Total process time):
      real time           0.07 seconds
      cpu time            0.01 seconds
      


2446  proc printto;
2447  run;

